--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,15 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
 
+
+<body>
+	<a href="/">Home</a>
+	<a href="/about/">About</a>
+	<a href="/blog/">Blog</a>
+ 
+	<h1>My Astro Site</h1>
+ </body>
+<!-- 
 <Layout title="Welcome to Astro.">
 	<main>
 		<svg
@@ -61,7 +70,7 @@ import Card from '../components/Card.astro';
 			/>
 		</ul>
 	</main>
-</Layout>
+</Layout> -->
 
 <style>
 	main {
