--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,15 +1,60 @@
-<body>
-   <h1>My Astro Site</h1>
+---
+const pageTitle = "About Me";
+
+const identity = {
+  firstName: "Sarah",
+  country: "Canada",
+  occupation: "Technical Writer",
+  hobbies: ["photography", "birdwatching", "baseball"],
+};
+
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
+
+const happy = true;
+const finished = false;
+const goal = 3;
+
+const skillColor = "navy";
 
 
-   <a href="/">Home</a>
-<a href="/about/">About</a>
+const operatingSystem = "Linux";
+const quantity = 3;
+const footwear = "boots";
+const student = false;
 
 
-   <h1>About Me</h1>
-   <h2>... and my new Astro site!</h2>
- 
-   <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
- 
-   <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
- </body>
+---
+
+<style define:vars={{skillColor}}>
+   h1 {
+     color: purple;
+     font-size: 4rem;
+   }
+   .skill {
+     color: green;
+     color: var(--skillColor);
+     font-weight: bold;
+   }
+ </style>
+
+
+<p>{operatingSystem}</p>
+
+{student && <p>I am still in school.</p>}
+
+<p>I have {quantity + 8} pairs of {footwear}</p>
+
+{operatingSystem === "MacOS" ? <p>I am using a Mac.</p> : <p>I am not using a Mac.</p>}
+
+<p>Here are a few facts about me:</p>
+<ul>
+  <li>My name is {identity.firstName}.</li>
+  <li>I live in {identity.country} and I work as a {identity.occupation}.</li>
+  {identity.hobbies.length >= 2 &&
+    <li>Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}</li>
+  }
+</ul>
+<p>My skills are:</p>
+<ul>
+  {skills.map((skill) => <li class="skill">{skill}</li>)}
+</ul>
